# CL_ml

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: index.yaml  train.yaml
docs/: colab_train_eval.md  ozon_prep_plan.md
notebooks/: 01_moss_tokenization_colab.ipynb  02_train_eval_colab.ipynb
scripts/: run_tokenize.ps1
src/: __init__.py
src/dataset/: augmentations.py  build_splits.py  token_dataset.py
src/index/: __init__.py  evaluate_retrieval.py
src/model/: __init__.py  embedder.py
src/service/: __init__.py
src/tokenizer/: __init__.py  moss_tokenize.py
src/train/: __init__.py  train_contrastive.py
