[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cl-ml-audio-retrieval"
version = "0.1.0"
description = "Audio token retrieval experiments for CloudTune."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

